Added video upload functionality
- Added video filename to Quote struct
- Added two new templates, incorrect and upload-video
- Added video.go with functions for video upload and validation
- Updated Dockerfile to add ffmpeg
- Added HTTP session management to store name of video uploaded to
  prevent race conditions with multiple concurrent users
- ListenAndServe now ListenAndServeTLS on 10443, requiring a certificate.crt and
  private.key

--- a/templates/add-quote.html
+++ b/templates/add-quote.html
@@ -20,11 +20,11 @@
 
         <div class="clearfix"></div>
 
+        
         <form method="POST" action="/add-quote" class="mt-5">
             %s
-
+            <a href="/upload-video">Got a video? Click here!</a><p>:video:</p>
             <button type="submit" class="btn btn-success float-right">Submit</button>
-
         </form>
 
         <div class="clearfix"></div>
