--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,9 @@
                         <div class="col-12 col-sm-10 col-md-10 col-lg-11">
                             <h3 class="mt-4">{{ $quote.HTML }}</h3>
                         </div>
+                        <div class="col-12 col-sm-10 col-md-10 col-lg-12 d-flex align-items-center justify-content-center">
+                            {{ $quote.EmbedVideo }}
+                        </div>
                     </div>
 
                     <div class="float-right text-muted">
