--- a/templates/quote.html
+++ b/templates/quote.html
@@ -12,39 +12,32 @@
 <div class="container">
     <div class="mt-5">
 
-        <div class="float-left">
-            <h2>Quotes</h2>
-        </div>
-
         <div class="float-right">
-            <a href="/add-quote" class="btn btn-success">Add a Quote</a>
+            <a href="/" class="btn btn-primary">Go Back</a>
         </div>
 
         <div class="clearfix"></div>
-
-        {{ range $index, $quote := .Quotes }}
-            <div class="card mt-5 mb-5">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-12 col-sm-2 col-md-2 col-lg-1">
+        <div class="card mt-5 mb-5">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12 col-sm-2 col-md-2 col-lg-1">
                             <i class="fas fa-quote-left" style="font-size: 3em; color: #0a84ff; float: left; margin-right: 30px; margin-left: 20px;"></i>
                         </div>
 
                         <div class="col-12 col-sm-10 col-md-10 col-lg-11">
-                            <h3 class="mt-4">{{ $quote.HTML true }}</h3>
+                            <h3 class="mt-4">{{ .Quote.HTML false }}</h3>
                         </div>
                         <div class="col-12 col-sm-10 col-md-10 col-lg-12 d-flex align-items-center justify-content-center">
-                            {{ $quote.EmbedVideo }}
+                            {{ .Quote.EmbedVideo }}
                         </div>
                     </div>
 
                     <div class="float-right text-muted">
-                        ~ {{ $quote.WhoSaidTheSillyThing }}<br>
-                        <small>Submitted on {{ $quote.Time.Format "Mon, 02 Jan 2006 15:04:05 MST" }}</small>
-                    </div>
+                        ~ {{ .Quote.WhoSaidTheSillyThing }}<br>
+                    <small>Submitted on {{ .Quote.Time.Format "Mon, 02 Jan 2006 15:04:05 MST" }}</small>
                 </div>
             </div>
-        {{ end }}
+        </div>
     </div>
 
     <footer class="text-right text-muted mb-5">
