--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Quotes</title>
+    <title>{{ .WebsiteName }}</title>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+
+    {{ .MetaTags }}
 </head>
 
 <body>
